View 및 README 추가